# quelltest-lib

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION.md  PROGRESS.md  QUELL_SPEC.md  README.md  SHOW_HN.md  pyproject.toml
.github/workflows/: ci.yml  quell-pr.yml  release.yml
docs/: configuration.md  github-actions.yml  index.md  quickstart.md
quell/: __init__.py  cli.py  mcp_server.py  sdk.py
quell/adapters/: base.py  mutmut_adapter.py  stryker_adapter.py
quell/auth/: __init__.py  oauth.py
quell/ci/: __init__.py  diff_parser.py  reporter.py  runner.py  threshold.py
quell/core/: analyzer.py  generator.py  models.py  verifier.py  writer.py
quell/coverage/: __init__.py  checker.py
quell/fix/: __init__.py  suggester.py
quell/github/: __init__.py  app.py  auth.py  formatter.py  pr_commenter.py  pr_runner.py
quell/llm/: client.py  prompts.py
quell/repair/: engine.py
quell/report/: generator.py
quell/score/: __init__.py  badge.py  calculator.py  tracker.py
quell/spec/: __init__.py  base.py  bug_reader.py  code_guard_reader.py  docstring_reader.py  mutation_reader.py  pyspark_reader.py  type_reader.py
quell/synthesis/: __init__.py  framework_engine.py  llm_engine.py  pyspark_rule_engine.py  rule_engine.py  sig_inspector.py
quell/ui/: console.py  diff.py  progress.py
tests/: conftest.py
tests/adapters/: test_mutmut_adapter.py  test_stryker_adapter.py
tests/fixtures/: stryker_report.json
tests/integration/: test_end_to_end.py
tests/score/: test_badge.py
tests/unit/: test_analyzer.py  test_auth.py  test_bug_reader.py  test_code_guard_reader.py  test_coverage_checker.py  test_docstring_reader.py  test_fix_suggester.py  test_generator.py  test_pr_runner.py  test_pyspark_reader.py  test_rule_engine.py  test_type_reader.py  test_verifier.py  test_writer.py
vscode-quell/: README.md  package.json
vscode-quell/src/: decorations.ts  extension.ts  scoreProvider.ts
(+7 files in other folders)
