[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quelltest"
version = "0.1.0"
description = "Auto-generates verified killing tests for survived mutants from mutmut and Stryker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shashank Bindal", email = "bindalshashank.89@gmail.com" }]
keywords = ["mutation-testing", "testing", "mutmut", "stryker", "test-generation", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "libcst>=1.3.0",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",   # for Ollama provider
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
quell = "quell.cli:app"

[project.urls]
Homepage = "https://github.com/shashank7109/quell"
Documentation = "https://quell.dev"
Repository = "https://github.com/shashank7109/quell"
Issues = "https://github.com/shashank7109/quell/issues"

[tool.hatch.version]
path = "quell/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["quell"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures"]
